--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "libphonenumber-js": "^1.11.15",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
