--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "libphonenumber-js": "^1.11.15",
+    "qrcode.vue": "^3.6.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
