--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "libphonenumber-js": "^1.11.15",
     "qrcode.vue": "^3.6.0",
     "vue": "^3.5.12",
+    "vue-animate": "^0.0.4",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
