--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
+    "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.11.15",
+    "mapbox-gl": "^3.9.3",
     "qrcode.vue": "^3.6.0",
     "vue": "^3.5.12",
     "vue-animate": "^0.0.4",
-    "vue-router": "^4.4.5"
+    "vue-leaflet": "^0.1.0",
+    "vue-router": "^4.4.5",
+    "vue3-leaflet": "^1.0.50"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
