--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueframe/vueframe": "^3.0.7",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.11.15",
     "mapbox-gl": "^3.9.3",
     "qrcode.vue": "^3.6.0",
+    "video.js": "^7.21.6",
     "vue": "^3.5.12",
     "vue-animate": "^0.0.4",
     "vue-leaflet": "^0.1.0",
     "vue-router": "^4.4.5",
-    "vue3-leaflet": "^1.0.50"
+    "vue-video-player": "^6.0.0",
+    "vue-videojs": "^0.0.4",
+    "vue3-leaflet": "^1.0.50",
+    "vue3-video-play": "^1.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "sass-embedded": "^1.83.4",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   }
