--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@vueframe/vueframe": "^3.0.7",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.7",
     "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.11.15",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^3.9.3",
     "qrcode.vue": "^3.6.0",
     "video.js": "^7.21.6",
