--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.7",
+    "json-formatter-js": "^2.5.18",
     "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.11.15",
     "lodash": "^4.17.21",
@@ -25,6 +26,7 @@
     "vue-router": "^4.4.5",
     "vue-video-player": "^6.0.0",
     "vue-videojs": "^0.0.4",
+    "vue3-json-editor": "^1.1.5",
     "vue3-leaflet": "^1.0.50",
     "vue3-video-play": "^1.3.2"
   },
