--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.7",
+    "fabric": "^6.6.1",
     "json-formatter-js": "^2.5.18",
+    "konva": "^9.3.18",
     "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.11.15",
     "lodash": "^4.17.21",
