--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@joeattardi/emoji-button": "^4.6.4",
     "@vueframe/vueframe": "^3.0.7",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
@@ -24,10 +25,13 @@
     "video.js": "^7.21.6",
     "vue": "^3.5.12",
     "vue-animate": "^0.0.4",
+    "vue-emoji-picker": "^1.0.3",
     "vue-leaflet": "^0.1.0",
     "vue-router": "^4.4.5",
     "vue-video-player": "^6.0.0",
     "vue-videojs": "^0.0.4",
+    "vue3-emoji": "^3.0.2",
+    "vue3-emoji-picker": "^1.1.8",
     "vue3-json-editor": "^1.1.5",
     "vue3-leaflet": "^1.0.50",
     "vue3-video-play": "^1.3.2"
