--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.7",
     "fabric": "^6.6.1",
+    "google": "^2.1.0",
     "json-formatter-js": "^2.5.18",
     "konva": "^9.3.18",
     "leaflet": "^1.9.4",
@@ -32,6 +33,7 @@
     "vue-videojs": "^0.0.4",
     "vue3-emoji": "^3.0.2",
     "vue3-emoji-picker": "^1.1.8",
+    "vue3-google-oauth2": "^1.0.7",
     "vue3-json-editor": "^1.1.5",
     "vue3-leaflet": "^1.0.50",
     "vue3-video-play": "^1.3.2"
