edit togle theme

--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "libphonenumber-js": "^1.11.15",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.9.3",
+    "pinia": "^3.0.2",
     "qrcode.vue": "^3.6.0",
     "video.js": "^7.21.6",
     "vue": "^3.5.12",
     "vue-animate": "^0.0.4",
     "vue-emoji-picker": "^1.0.3",
+    "vue-i18n": "^9.14.4",
     "vue-leaflet": "^0.1.0",
     "vue-router": "^4.4.5",
     "vue-video-player": "^6.0.0",
