--- a/package.json
+++ b/package.json
@@ -14,31 +14,17 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.7",
-    "fabric": "^6.6.1",
     "google": "^2.1.0",
-    "json-formatter-js": "^2.5.18",
-    "konva": "^9.3.18",
-    "leaflet": "^1.9.4",
-    "libphonenumber-js": "^1.11.15",
+    "json-formatter-js": "^2.5.23",
     "lodash": "^4.17.21",
-    "mapbox-gl": "^3.9.3",
     "pinia": "^3.0.2",
     "qrcode.vue": "^3.6.0",
-    "video.js": "^7.21.6",
     "vue": "^3.5.12",
     "vue-animate": "^0.0.4",
-    "vue-emoji-picker": "^1.0.3",
     "vue-i18n": "^9.14.4",
-    "vue-leaflet": "^0.1.0",
     "vue-router": "^4.4.5",
-    "vue-video-player": "^6.0.0",
-    "vue-videojs": "^0.0.4",
-    "vue3-emoji": "^3.0.2",
-    "vue3-emoji-picker": "^1.1.8",
     "vue3-google-oauth2": "^1.0.7",
-    "vue3-json-editor": "^1.1.5",
-    "vue3-leaflet": "^1.0.50",
-    "vue3-video-play": "^1.3.2"
+    "vue3-json-editor": "^1.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
