--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "json-formatter-js": "^2.5.23",
     "lodash": "^4.17.21",
     "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "qrcode.vue": "^3.6.0",
     "vue": "^3.5.12",
     "vue-animate": "^0.0.4",
