--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.7",
+    "driver.js": "^1.3.6",
     "google": "^2.1.0",
     "json-formatter-js": "^2.5.23",
     "lodash": "^4.17.21",
