--- a/env.config.json
+++ b/env.config.json
@@ -14,6 +14,7 @@
     "VITE_GROUP_URL": "https://bapi88.developtech.ru/api/v1/groups",
     "VITE_BINDING_URL": "https://bapi88.developtech.ru/api/v1/crm",
     "VITE_CHATS_URL": "https://chats.developtech.ru/account/",
+    "VITE_INVOICES_URL": "https://bapi88.developtech.ru/api/v1/invoices/",
     "VITE_DOMAINS": "app4.developtech.ru,localhost,mwi.apitter.com,ctacrew.apitter.com,chatserv.apitter.com,whatsapi.developtech.ru,app1.developtech.ru,webest.developtech.ru",
     "VITE_NAVIGATE_VALUES": "settings,touchapi,touchapi,touchapi,touchapi,whatsapi,touchapi,touchapi",
     "VITE_LOGOS": "Crypto,chatserv,mwi,ctacrew,chatserv,WhatsApi,TouchApi,Webest",
@@ -37,6 +38,7 @@
     "VITE_GROUP_URL": "https://bapi88.apitter.com/api/v1/groups",
     "VITE_BINDING_URL": "https://bapi88.apitter.com/api/v1/crm",
     "VITE_CHATS_URL": "https://chats.apitter.com/account/",
+    "VITE_INVOICES_URL": "https://bapi88.apitter.com/api/v1/invoices/",
     "VITE_DOMAINS": "localhost,app.chatserv.ru,app.whatsapi.ru,app2.touch-api.com,app.webest.ru",
     "VITE_NAVIGATE_VALUES": "touchapi,touchapi,whatsapi,touchapi,touchapi",
     "VITE_LOGOS": "chatserv,chatserv,WhatsApi,TouchApi,Webest",
