--- a/env.config.json
+++ b/env.config.json
@@ -21,7 +21,8 @@
     "VITE_TITLE_LOGOS": "Crypto,ChatServ,MWI,CtaCrew,ChatServ,WhatsApi,Touch-Api,Webest",
     "VITE_URL_LOGOS": "/crypto.svg,/chatserv_logo.svg,/chatserv_logo.svg,/mvi_logo.svg,/ctacrew_logo.svg,/chatserv_logo.svg,/whatsApi_logo.svg,/brandMedia/webest_logo.svg",
     "VITE_ADDITIONAL_LOGOS": "EMPTY,/title_chatserv.svg,EMPTY,EMPTY,/title_chatserv.svg,EMPTY,EMPTY,/brandMedia/webest_title.svg",
-    "VITE_LOG_SETTINGS": "error"
+    "VITE_LOG_SETTINGS": "error",
+    "VITE_BASE_URL": "https://bapi88.developtech.ru/api/v1/"
   },
   "production": {
     "VITE_API_URL": "https://api28.apitter.com/api",
@@ -39,6 +40,7 @@
     "VITE_BINDING_URL": "https://bapi88.apitter.com/api/v1/crm",
     "VITE_CHATS_URL": "https://chats.apitter.com/account/",
     "VITE_INVOICES_URL": "https://bapi88.apitter.com/api/v1/invoices/",
+    "VITE_BASE_URL": "https://bapi88.apitter.com/api/v1/",
     "VITE_DOMAINS": "localhost,app.chatserv.ru,app.whatsapi.ru,app2.touch-api.com,app.webest.ru",
     "VITE_NAVIGATE_VALUES": "touchapi,touchapi,whatsapi,touchapi,touchapi",
     "VITE_LOGOS": "chatserv,chatserv,WhatsApi,TouchApi,Webest",
