--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:e2e:chrome": "playwright test --project=chromium"
   },
   "dependencies": {
+    "@floating-ui/vue": "^1.1.9",
     "@joeattardi/emoji-button": "^4.6.4",
     "@vueframe/vueframe": "^3.0.7",
     "animate.css": "^4.1.1",
@@ -25,6 +26,7 @@
     "cypress": "^15.7.1",
     "dotenv": "^16.4.7",
     "driver.js": "^1.3.6",
+    "floating-vue": "^5.2.2",
     "google": "^2.1.0",
     "json-formatter-js": "^2.5.23",
     "lodash": "^4.17.21",
