--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.4.7",
     "driver.js": "^1.3.6",
     "floating-vue": "^5.2.2",
+    "fuse.js": "^7.1.0",
     "google": "^2.1.0",
     "json-formatter-js": "^2.5.23",
     "lodash": "^4.17.21",
@@ -44,6 +45,7 @@
     "@playwright/test": "^1.57.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "sass-embedded": "^1.83.4",
+    "unplugin-vue-markdown": "^29.2.0",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   }
